[tool.poetry]
name = "channelsorter"
version = "0.1.0"
description = ""
authors = ["Slavfox <slavfoxman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
py-cord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
